[package]
name = "rusty_asteroid"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Add optimized release profile
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
bevy = { version = "0.16.1" }
fastrand = "2.0"

[package.metadata.bundle]
name = "Rusty Asteroid"
identifier = ""
version = "0.1.0"
copyright = "Copyright (c) 2025"
category = "Game"
short_description = "A simple asteroid game"
long_description = "A classic asteroid game built with Bevy engine"
